--- a/INS-CLONE/frontend/src/index.css
+++ b/INS-CLONE/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: burlywood;
+  background-color: white;
 
   /* Remove the 'font-synthesis' property */
   text-rendering: optimizeLegibility;
